<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.rahpa.yasamani.rahpamap.MapFeature.MapsActivity" />

    <TextView
        android:id="@+id/dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/map_dialog"
        android:textColor="#0e8e07"
        android:background="#fff"
        android:padding="6dp" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:src="@drawable/undo"
        android:contentDescription="@string/clear" />

    <ImageView
        android:id="@+id/center_indicator"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/center_indicator"
        android:src="@drawable/origin_indicator" />

</RelativeLayout>
